Rename folder, added description to the task

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,37 +4,37 @@ project(cpp_homework)
 set(CMAKE_CXX_STANDARD 11)
 
 set(SOURCE_FILES
-    AbstractClass/build/Debug/Cygwin-Windows/main.o
-    AbstractClass/build/Debug/Cygwin-Windows/main.o.d
-    AbstractClass/build/Debug/Cygwin-Windows/Octagon.o
-    AbstractClass/build/Debug/Cygwin-Windows/Octagon.o.d
-    AbstractClass/build/Debug/Cygwin-Windows/Square.o
-    AbstractClass/build/Debug/Cygwin-Windows/Square.o.d
-    AbstractClass/build/Debug/Cygwin-Windows/Triangle.o
-    AbstractClass/build/Debug/Cygwin-Windows/Triangle.o.d
-    AbstractClass/dist/Debug/Cygwin-Windows/abstractclass.exe
-    AbstractClass/dist/Debug/GNU-Linux-x86/abstractclass
-    AbstractClass/nbproject/private/configurations.xml
-    AbstractClass/nbproject/private/launcher.properties
-    AbstractClass/nbproject/private/Makefile-variables.mk
-    AbstractClass/nbproject/private/private.xml
-    AbstractClass/nbproject/configurations.xml
-    AbstractClass/nbproject/Makefile-Debug.mk
-    AbstractClass/nbproject/Makefile-impl.mk
-    AbstractClass/nbproject/Makefile-Release.mk
-    AbstractClass/nbproject/Makefile-variables.mk
-    AbstractClass/nbproject/Package-Debug.bash
-    AbstractClass/nbproject/Package-Release.bash
-    AbstractClass/nbproject/project.xml
-    AbstractClass/main.cpp
-    AbstractClass/Makefile
-    AbstractClass/Octagon.cpp
-    AbstractClass/Octagon.h
-    AbstractClass/RegularPolygon.h
-    AbstractClass/Square.cpp
-    AbstractClass/Square.h
-    AbstractClass/Triangle.cpp
-    AbstractClass/Triangle.h
+        3/build/Debug/Cygwin-Windows/main.o
+        3/build/Debug/Cygwin-Windows/main.o.d
+        3/build/Debug/Cygwin-Windows/Octagon.o
+        3/build/Debug/Cygwin-Windows/Octagon.o.d
+        3/build/Debug/Cygwin-Windows/Square.o
+        3/build/Debug/Cygwin-Windows/Square.o.d
+        3/build/Debug/Cygwin-Windows/Triangle.o
+        3/build/Debug/Cygwin-Windows/Triangle.o.d
+        3/dist/Debug/Cygwin-Windows/abstractclass.exe
+        3/dist/Debug/GNU-Linux-x86/abstractclass
+        3/nbproject/private/configurations.xml
+        3/nbproject/private/launcher.properties
+        3/nbproject/private/Makefile-variables.mk
+        3/nbproject/private/private.xml
+        3/nbproject/configurations.xml
+        3/nbproject/Makefile-Debug.mk
+        3/nbproject/Makefile-impl.mk
+        3/nbproject/Makefile-Release.mk
+        3/nbproject/Makefile-variables.mk
+        3/nbproject/Package-Debug.bash
+        3/nbproject/Package-Release.bash
+        3/nbproject/project.xml
+        3/main.cpp
+        3/Makefile
+        3/Octagon.cpp
+        3/Octagon.h
+        3/RegularPolygon.h
+        3/Square.cpp
+        3/Square.h
+        3/Triangle.cpp
+        3/Triangle.h
     BInFile/build/Debug/Cygwin-Windows/CreateFile.o
     BInFile/build/Debug/Cygwin-Windows/CreateFile.o.d
     BInFile/build/Debug/Cygwin-Windows/main.o
