Update gitignore, fix errors, code style, update CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,164 +1,6 @@
-cmake_minimum_required(VERSION 3.6)
+cmake_minimum_required(VERSION 3.0)
 project(cpp_homework)
 
-set(CMAKE_CXX_STANDARD 11)
-
-set(SOURCE_FILES
-        3/build/Debug/Cygwin-Windows/main.o
-        3/build/Debug/Cygwin-Windows/main.o.d
-        3/build/Debug/Cygwin-Windows/Octagon.o
-        3/build/Debug/Cygwin-Windows/Octagon.o.d
-        3/build/Debug/Cygwin-Windows/Square.o
-        3/build/Debug/Cygwin-Windows/Square.o.d
-        3/build/Debug/Cygwin-Windows/Triangle.o
-        3/build/Debug/Cygwin-Windows/Triangle.o.d
-        3/dist/Debug/Cygwin-Windows/abstractclass.exe
-        3/dist/Debug/GNU-Linux-x86/abstractclass
-        3/nbproject/private/configurations.xml
-        3/nbproject/private/launcher.properties
-        3/nbproject/private/Makefile-variables.mk
-        3/nbproject/private/private.xml
-        3/nbproject/configurations.xml
-        3/nbproject/Makefile-Debug.mk
-        3/nbproject/Makefile-impl.mk
-        3/nbproject/Makefile-Release.mk
-        3/nbproject/Makefile-variables.mk
-        3/nbproject/Package-Debug.bash
-        3/nbproject/Package-Release.bash
-        3/nbproject/project.xml
-        3/main.cpp
-        3/Makefile
-        3/Octagon.cpp
-        3/Octagon.h
-        3/RegularPolygon.h
-        3/Square.cpp
-        3/Square.h
-        3/Triangle.cpp
-        3/Triangle.h
-        9/build/Debug/Cygwin-Windows/CreateFile.o
-        9/build/Debug/Cygwin-Windows/CreateFile.o.d
-        9/build/Debug/Cygwin-Windows/main.o
-        9/build/Debug/Cygwin-Windows/main.o.d
-        9/build/Debug/GNU-Linux-x86/CreateBinFile.o
-        9/build/Debug/GNU-Linux-x86/CreateBinFile.o.d
-        9/build/Debug/GNU-Linux-x86/CreateFile.o
-        9/build/Debug/GNU-Linux-x86/CreateFile.o.d
-        9/build/Debug/GNU-Linux-x86/main.o
-        9/build/Debug/GNU-Linux-x86/main.o.d
-        9/dist/Debug/Cygwin-Windows/binfile.exe
-        9/dist/Debug/GNU-Linux-x86/binfile
-        9/nbproject/private/configurations.xml
-        9/nbproject/private/launcher.properties
-        9/nbproject/private/Makefile-variables.mk
-        9/nbproject/private/private.xml
-        9/nbproject/configurations.xml
-        9/nbproject/Makefile-Debug.mk
-        9/nbproject/Makefile-impl.mk
-        9/nbproject/Makefile-Release.mk
-        9/nbproject/Makefile-variables.mk
-        9/nbproject/Package-Debug.bash
-        9/nbproject/Package-Release.bash
-        9/nbproject/project.xml
-        9/CreateBinFile.cpp
-        9/CreateBinFIle.h
-        9/CreateFile.cpp
-        9/CreateFile.h
-        9/file
-        9/main.cpp
-        5/build/Debug/GNU-Linux-x86/main.o
-        5/build/Debug/GNU-Linux-x86/main.o.d
-        5/build/Debug/GNU-Linux-x86/Rectangle.o
-        5/build/Debug/GNU-Linux-x86/Rectangle.o.d
-        5/dist/Debug/GNU-Linux-x86/class_inheritance
-        5/nbproject/private/configurations.xml
-        5/nbproject/private/launcher.properties
-        5/nbproject/private/Makefile-variables.mk
-        5/nbproject/private/private.xml
-        5/nbproject/configurations.xml
-        5/nbproject/Makefile-Debug.mk
-        5/nbproject/Makefile-impl.mk
-        5/nbproject/Makefile-Release.mk
-        5/nbproject/Makefile-variables.mk
-        5/nbproject/Package-Debug.bash
-        5/nbproject/Package-Release.bash
-        5/nbproject/project.xml
-        5/main.cpp
-        5/Makefile
-        5/Rectangle.cpp
-        5/Rectangle.h
-        4/build/Debug/GNU-Linux-x86/main.o
-        4/build/Debug/GNU-Linux-x86/main.o.d
-        4/dist/Debug/GNU-Linux-x86/classrectangle
-        4/nbproject/private/configurations.xml
-        4/nbproject/private/Makefile-variables.mk
-        4/nbproject/private/private.xml
-        4/nbproject/configurations.xml
-        4/nbproject/Makefile-Debug.mk
-        4/nbproject/Makefile-impl.mk
-        4/nbproject/Makefile-Release.mk
-        4/nbproject/Makefile-variables.mk
-        4/nbproject/Package-Debug.bash
-        4/nbproject/Package-Release.bash
-        4/nbproject/project.xml
-        4/main.cpp
-        4/Makefile
-        7/build/Debug/GNU-Linux-x86/main.o
-        7/build/Debug/GNU-Linux-x86/main.o.d
-        7/dist/Debug/GNU-Linux-x86/fileprog
-        7/nbproject/private/configurations.xml
-        7/nbproject/private/launcher.properties
-        7/nbproject/private/Makefile-variables.mk
-        7/nbproject/private/private.xml
-        7/nbproject/configurations.xml
-        7/nbproject/Makefile-Debug.mk
-        7/nbproject/Makefile-impl.mk
-        7/nbproject/Makefile-Release.mk
-        7/nbproject/Makefile-variables.mk
-        7/nbproject/Package-Debug.bash
-        7/nbproject/Package-Release.bash
-        7/nbproject/project.xml
-        7/file.txt
-        7/main.cpp
-        7/Makefile
-        1/fraction.cpp
-        1/fraction.h
-        1/main.cpp
-        2/main.cpp
-        2/Triangle.cpp
-        2/Triangle.h
-    MaxMinElements/build/Debug/GNU-Linux-x86/main.o
-    MaxMinElements/build/Debug/GNU-Linux-x86/main.o.d
-    MaxMinElements/dist/Debug/GNU-Linux-x86/maxminelements
-    MaxMinElements/nbproject/private/configurations.xml
-    MaxMinElements/nbproject/private/Makefile-variables.mk
-    MaxMinElements/nbproject/private/private.xml
-    MaxMinElements/nbproject/configurations.xml
-    MaxMinElements/nbproject/Makefile-Debug.mk
-    MaxMinElements/nbproject/Makefile-impl.mk
-    MaxMinElements/nbproject/Makefile-Release.mk
-    MaxMinElements/nbproject/Makefile-variables.mk
-    MaxMinElements/nbproject/Package-Debug.bash
-    MaxMinElements/nbproject/Package-Release.bash
-    MaxMinElements/nbproject/project.xml
-    MaxMinElements/main.cpp
-    MaxMinElements/Makefile
-        8/build/Debug/GNU-Linux-x86/main.o
-        8/build/Debug/GNU-Linux-x86/main.o.d
-        8/dist/Debug/GNU-Linux-x86/maxminreferences
-        8/nbproject/private/configurations.xml
-        8/nbproject/private/launcher.properties
-        8/nbproject/private/Makefile-variables.mk
-        8/nbproject/private/private.xml
-        8/nbproject/configurations.xml
-        8/nbproject/Makefile-Debug.mk
-        8/nbproject/Makefile-impl.mk
-        8/nbproject/Makefile-Release.mk
-        8/nbproject/Makefile-variables.mk
-        8/nbproject/Package-Debug.bash
-        8/nbproject/Package-Release.bash
-        8/nbproject/project.xml
-        8/main.cpp
-        8/Makefile
-    README.md 4/Rectangle.h 4/Rectangle.cpp 5/Parallelepiped.cpp 5/Parallelepiped.h)
+set(SOURCE_FILES 1/main.cpp 1/fraction.cpp 1/fraction.h)
 
 add_executable(cpp_homework ${SOURCE_FILES})
